# fastapi-base

./: README.md  generate.sh  requirements.txt
.github/actions/generate-template/: action.yml
.github/actions/setup-env/: action.yml
.github/actions/test-template/: action.yml
.github/workflows/: template-generation.yaml
app/: cookiecutter.json
app/hooks/: post_gen_project.py
app/{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.local  README.md  docker-compose.yml  pyproject.toml  pyproject.toml.j2  ruff.toml
app/{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
app/{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml  lint.yaml
app/{{cookiecutter.project_slug}}/app/: main.py
app/{{cookiecutter.project_slug}}/app/api/: deps.py  router.py
app/{{cookiecutter.project_slug}}/app/api/models/: todo.py  user.py
app/{{cookiecutter.project_slug}}/app/api/routers/: user.py
app/{{cookiecutter.project_slug}}/app/api/schemas/: todo.py  user.py
app/{{cookiecutter.project_slug}}/app/core/: config.py  db.py  logging.py  mongodb.py  sqlite.py
app/{{cookiecutter.project_slug}}/app/middleware/: request_response_logger.py
app/{{cookiecutter.project_slug}}/hooks_modules/: branch_protection.json  main.py
app/{{cookiecutter.project_slug}}/tests/: conftest.py  test_health.py
